Z-Index fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -57,7 +57,7 @@ h3 {
   color: #105310;
 }
 
-@media (max-width: 56.25em) {
+@media (max-width: 64em) {
   .hide-on-tablet {
     display: none;
   }
@@ -172,6 +172,7 @@ h3 {
   font-family: "Roboto", sans-serif;
   letter-spacing: 1px;
   line-height: 1.25;
+  color: #707070;
   transition: all 0.25s;
 }
 
@@ -211,14 +212,14 @@ h3 {
   background-color: rgba(255, 255, 255, 0.8);
   color: #105310;
   position: fixed;
-  z-index: 15;
+  z-index: 900;
   top: 0;
   left: 0;
   width: 100%;
   letter-spacing: 1px;
 }
 
-@media (max-width: 56.25em) {
+@media (max-width: 64em) {
   .header {
     position: absolute;
   }
@@ -260,10 +261,10 @@ h3 {
   cursor: pointer;
   display: none;
   position: relative;
-  z-index: 20;
+  z-index: 999;
 }
 
-@media (max-width: 56.25em) {
+@media (max-width: 64em) {
   .header__toggle-button {
     display: block;
   }
@@ -301,7 +302,7 @@ h3 {
   font-size: inherit;
 }
 
-@media (max-width: 56.25em) {
+@media (max-width: 64em) {
   .header__menu {
     display: none;
   }
@@ -309,7 +310,6 @@ h3 {
 
 .header__menu--mobile {
   position: fixed;
-  z-index: 15;
   height: 100vh;
   top: 0;
   left: 0;
@@ -410,35 +410,6 @@ h3 {
   width: 100%;
   font-weight: bold;
   transition: all 0.6s;
-}
-
-.main--advanced-search {
-  height: calc(100vh - 7rem);
-  background-color: rgba(255, 255, 255, 0.8);
-  max-width: 160rem;
-  margin-left: auto;
-  margin-right: auto;
-  position: relative;
-}
-
-.main--advanced-search .apartments-list {
-  width: 100%;
-  padding: 2rem;
-  padding-right: 50%;
-  height: calc(100vh - 2 * 7rem);
-  overflow-x: auto;
-  overflow-y: auto;
-}
-
-@media (max-width: 56.25em) {
-  .main--advanced-search .apartments-list {
-    padding-right: 2rem;
-    height: calc( 100% - 20rem - 7rem);
-  }
-}
-
-.main--advanced-search .apartments-list--map-hidden {
-  height: calc( 100% - 7rem);
 }
 
 .container {
